Todas las vistas creadas, layout modificado: se agregaron listado de marcaciones de funcionarios y profesores

--- a/application/views/scripts/recuperaciones/registrarrecuperacion.phtml
+++ b/application/views/scripts/recuperaciones/registrarrecuperacion.phtml
@@ -86,8 +86,10 @@ echo $this->headLink()
                         <option value="4">Ingenieria de Software</option>
                 </select>
                 </tr>
+                <tr><td>Fecha de Recuperación</td><td><input type="text" id="fecha" name="fecha"></td></tr>
                 <tr><td></td><td>
                 <input type="submit" id="submit">
+
                     <?php echo $this->loginError; ?>
             </table>
         </form>
