--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -40,9 +40,12 @@ echo $this->headLink()
                         <ul class="nav">
                             <li><a href="<?php echo $this->baseUrl() . "/index/asistenciafuncionarios" ?>"></i>Asistencia Funcionarios</a></li>    
                             <li><a href="<?php echo $this->baseUrl() . "/index/asistenciaprofesores" ?>"></i>Asistencia Profesores</a></li>    
-                            <li><a href="<?php echo $this->baseUrl() . "/recuperaciones" ?>"></i>Recuperación de Clase</a></li>    
+                            <li><a href="<?php echo $this->baseUrl() . "/recuperaciones" ?>"></i>Recuperación de Clase</a></li>
+                            <li><a href="<?php echo $this->baseUrl() . "/recuperaciones/registrarrecuperacion" ?>"></i>Agregar Nueva Recuperación de Clase</a></li>
                             <li><a href="<?php echo $this->baseUrl() . "/administration/index" ?>"></i>Registrar Nuevo Usuario</a></li>    
-                         </ul>
+                            <li><a href="<?php echo $this->baseUrl() . "/administration/listworkers" ?>"></i>Registro Marcaciones Funcionarios</a></li>
+                            <li><a href="<?php echo $this->baseUrl() . "/administration/listteachers" ?>"></i>Registro Marcaciones Profesores</a></li>
+                        </ul>
                 </div><!--/.nav-collapse -->
             </div>
         </div>
