--- a/application/views/scripts/administration/listteachers.phtml
+++ b/application/views/scripts/administration/listteachers.phtml
@@ -70,27 +70,13 @@ echo $this->headLink()
     </script>
 
 </head>
-<div class="span3" style="margin: 0px;">
+<div class="span6" style="margin: 0px;">
     <div id="logo">   
-        <h1>Recuperacion de Clase</h1>
+        <h1>Sistema de Marcación</h1>
     </div>
     <div id="login" >
-
-        <form id="login-form" action="<?php echo $this->url(array('controller' => 'administration', 'action' => 'login')); ?>" method="post">
-            <table>
-                <tr><td>Usuario</td><td><input type="text" id="username" name="username"></td></tr>
-                <tr><td>Materias</td><td><select name="materia">
-                        <option value="1">Ecuaciones Diferenciales</option>
-                        <option value="2">Estadística</option>
-                        <option value="3">Informatica 3</option>
-                        <option value="4">Ingenieria de Software</option>
-                </select>
-                </tr>
-                <tr><td></td><td>
-                <input type="submit" id="submit">
+                   ACA VA LA TABLA CON EL LISTADO DE LAS MARCACIONES DE LOS PROFESORES
                     <?php echo $this->loginError; ?>
-            </table>
-        </form>
     </div>
 </div>
 <div class="span3"></div>
