--- a/application/views/scripts/administration/listworkers.phtml
+++ b/application/views/scripts/administration/listworkers.phtml
@@ -21,7 +21,7 @@ echo $this->headLink()
         a{
             text-align: right;
             text-decoration: none;
-            font-size: 10px;
+            font-size: 12px;
             font-weight:bold;
             color: #49AFCD;
             top: 0;
@@ -70,25 +70,14 @@ echo $this->headLink()
     </script>
 
 </head>
-<div class="span6"></div>
-<div class="span3" style="margin: 30px;">
+<div class="span6" style="margin: 0px;">
     <div id="logo">   
-        <h1>Asistencia UCA</h1>
+        
+        <h1>Sistema de Marcación</h1>
     </div>
     <div id="login" >
-
-        <form id="login-form" action="<?php echo $this->url(array('controller' => 'administration', 'action' => 'login')); ?>" method="post">
-            <table>
-                <tr><td>Usuario</td><td><input type="text" id="username" name="username"></td></tr>
-                <tr><td>Contrase&ntilde;a</td><td><input type="password" id="password" name="password"></td></tr>
-
-                <tr id="forgot"><td></td><td><a href="<?php echo $this->url(array('controller' => 'administration', 'action' => 'passwordforgot')); ?>">Olvid&oacute; su password?</a></td></tr>
-                <tr><td>
-                        <a onclick="doSubmit();" href="#" class="btn btn-primary" id="login-btn"> <i class="icon-hand-right icon-white"></i>Login</a></td>
-                </tr>
-                <?php echo $this->loginError; ?>
-            </table>
-        </form>
+                   ACA VA LA TABLA CON EL LISTADO DE LAS MARCACIONES DE LOS FUNCIONARIOS
+                    <?php echo $this->loginError; ?>
     </div>
 </div>
 <div class="span3"></div>
