--- a/application/views/scripts/recuperaciones/index.phtml
+++ b/application/views/scripts/recuperaciones/index.phtml
@@ -1,12 +1,14 @@
 <?php
-echo $this->headScript()->
-        appendFile($this->baseUrl() . "/js/jquery-1.7.1.js")->
-        appendFile($this->baseUrl() . "/js/bootstrap/bootstrap.js");
+echo $this->headScript()
+        ->appendFile($this->baseUrl() . "/js/jquery-1.10.2.min.js")
+        ->appendFile($this->baseUrl() . "/js/typeahead.min.js")
+        ->appendFile($this->baseUrl() . "/js/hogan-2.0.0.js");
 
 echo $this->headLink()
         ->setIndent('  ')
         ->prependStylesheet($this->baseUrl() . "/css/bootstrap/bootstrap.css")
-        ->prependStylesheet($this->baseUrl() . "/css/bootstrap/bootstrap-responsive.css");
+        ->prependStylesheet($this->baseUrl() . "/css/bootstrap/bootstrap-responsive.css")
+        ->prependStylesheet($this->baseUrl() . "/css/typeahead.css");
 ?>
 <head>
 
@@ -37,60 +39,65 @@ echo $this->headLink()
     </style>
 
     <script type="text/javascript">
-        function hideAlert() {
-            $("#value-alert").hide(1000);
-        }
-
-        function doSubmit() {
-            $("#login-form").submit();
-        }
-
         $(document).ready(function() {
-            setTimeout("hideAlert()", 7500);
+            var list = [];
+            var json;
 
-//            $("#login-btn").click(function(event) {
-//                doSubmit();
-//            });
-
-            $("#login-form").validate({
-                rules: {
-                    username: {
-                        required: true
-                    },
-                    password: {
-                        required: true
+            $.ajax({
+                url: "../administration/getteachers",
+                success: function(data) {
+                    json = data;
+                    for (var i = 0; i < data.length; i++) {
+                        if (list.indexOf(data[i].email) === -1)
+                            list.push(data[i].email);
                     }
                 },
-                messages: {
-                    username: "Username requerido",
-                    password: "Password requerido"
+                dataType: 'json',
+                async: false
+            });
+
+            $('#username').typeahead({
+                name: 'profesor',
+                local: list
+            });
+
+            $('#username').blur(function() {
+                var email = $('#username').val();
+                $('#materia').empty();
+                var data = json;
+
+                for (var i = 0; i < data.length; i++) {
+                    if (data[i].email === email) {
+                        $('#materia').append('<option value="' + data[i].id_materia + '">' + data[i].nombre_materia + '</option>');
+                    }
                 }
             });
+
         });
     </script>
 
 </head>
 <div class="span3" style="margin: 0px;">
     <div id="logo">   
-        <h1>Recuperacion de Clase</h1>
+        <h1>Marcación</h1>
     </div>
     <div id="login" >
 
         <form id="login-form" action="<?php echo $this->url(array('controller' => 'administration', 'action' => 'login')); ?>" method="post">
             <table>
                 <tr><td>Usuario</td><td><input type="text" id="username" name="username"></td></tr>
-                <tr><td>Materias</td><td><select name="materia">
-                        <option value="1">Ecuaciones Diferenciales</option>
-                        <option value="2">Estadística</option>
-                        <option value="3">Informatica 3</option>
-                        <option value="4">Ingenieria de Software</option>
+                <tr><td>Materias</td><td><select name="materia" id="materia">
                 </select>
                 </tr>
                 <tr><td></td><td>
-                <input type="submit" id="submit">
+                                        <input type="submit" id="submit">
+
+                <!--<a onclick="doSubmit();" href="#" class="btn btn-primary" id="login-btn"> <i class="icon-hand-right icon-white"></i>Marcar</a></td>-->
+
                     <?php echo $this->loginError; ?>
             </table>
         </form>
     </div>
 </div>
 <div class="span3"></div>
+
